--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -720,4 +720,13 @@
 
     <string name="alert_not_logged_in" context="Alert to inform the user that have to be logged in to perform the action">You must be logged in to perform this action.</string>
     <string name="invalid_string" context="Error when the user leaves empty the password field">Incorrect</string>
+
+    <string name="invalid_email_title" context="Title of the alert dialog when the user tries to recover the pass of a non existing account">Invalid email address</string>
+    <string name="invalid_email_text" context="Title of the alert dialog when the user tries to recover the pass of a non existing account">Please check the e-mail address and try again.</string>
+    <string name="alert_not_logged_out" context="Alert to inform the user that have to be logged out to perform the action">You must be logged out to perform this action.</string>
+
+    <string name="title_dialog_insert_MK" context="Title of the dialog to write MK after opening the recovery link">Password reset</string>
+    <string name="text_dialog_insert_MK" context="Text of the dialog to write MK after opening the recovery link">Please write below your recovery key.</string>
+
+    <string name="pass_changed_alert" context="Text of the alert when the pass has been correctly changed">Password changed!</string>
 </resources>
