--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -311,7 +311,7 @@
     <string name="context_adding_contact" context="Adding a new relationship (contact)">Adding contact</string>
     <string name="context_download_to" context="Menu item">Save to</string>
     <string name="context_clear_rubbish" context="Menu option title">Empty Rubbish Bin</string>
-    <string name="clear_rubbish_confirmation" context="Ask for confirmation before removing all the elements of the rubbish bin">All the elements of the Rubbish Bin will be removed.</string>
+    <string name="clear_rubbish_confirmation" context="Ask for confirmation before removing all the elements of the rubbish bin">All items inside Rubbish Bin will be deleted.</string>
     <string name="context_send_link" context="get the link and send it">Send link</string>
     <string name="context_send" context="get the link and send it">Send</string>
     <string name="context_send_file_inbox" context="send the file to inbox">Send to Inbox</string>
