--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -743,4 +743,10 @@
     <string name="my_account_upgrade_pro_panel" context="Button to upgrade the account to PRO account in the panel that appears randomly">¡Hazte PRO!</string>
     <string name="get_pro_account" context="Message to promote PRO accounts">Aumenta la capacidad de tu almacenamiento en la nube!\n Más espacio &amp; ancho de banda con una cuenta Pro!</string>
     <string name="toast_master_key" context="success message when the MasterKey file has been downloaded">Tu Clave Maestra ha sido exportada en: %s.\nMientras el fichero esté en esta ruta, lo encontrarás también la sección Disponible Sin Conexión.\nNota: El fichero se eliminará si cierras la sesión, por favor, guárdalo en un lugar seguro.</string>
+
+    <string name="next_ime_action" context="Action to pass focus to the next field in a form">Siguiente</string>
+
+    <string name="error_changing_user_attributes" context="Message when an error ocurred when changing an user attribute">Error al actualizar los nuevos datos de la cuenta.</string>
+    <string name="success_changing_user_attributes" context="Message when an user attribute has been changed succesfully">Los datos de tu cuenta han sido correctamente actualizados.</string>
+
 </resources>
