--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -750,7 +750,13 @@
     <string name="next_ime_action" context="Action to pass focus to the next field in a form">Next</string>
 
     <string name="error_changing_user_attributes" context="Message when an error ocurred when changing an user attribute">Error when changing the account data.</string>
-    <string name="success_changing_user_attributes" context="Message when an user attribute has been changed succesfully">Your account data has been correctly updated.</string>
+    <string name="success_changing_user_attributes" context="Message when an user attribute has been changed successfully">Your account data has been correctly updated.</string>
 
     <string name="mail_already_used" context="Error shown when the user tries to change his mail to one that is already used">Error. This email address is already in use.</string>
+
+    <string name="change_mail_text_last_step" context="Text shown in the last alert dialog to change the email associated to an account">This is the last step to change your email. Please enter your password below.</string>
+    <string name="change_mail_title_last_step" context="Title of the alert dialog to change the email associated to an account">Change email</string>
+
+    <string name="success_changing_user_mail" context="Message when the user email has been changed successfully">Your email has been correctly updated.</string>
+
 </resources>
